# ewasm-rt

./: Cargo.toml  README.md
.github/workflows/: test.yaml
src/: buffer.rs  execute.rs  externals.rs  lib.rs  resolver.rs  runtime.rs
src/env/: mod.rs
src/env/child/: mod.rs  resolver.rs
src/env/root/: mod.rs  resolver.rs
tests/: child_functions.rs  host_functions.rs
tests/utils/: mod.rs
