[package]
name = "ewasm"
version = "0.1.3"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Matt Garnett <14004106+lightclient@users.noreply.github.com>"]
license = "Apache-2.0"
description = "A modular WebAssembly runtime for Ethereum 2.0."
repository = "https://github.com/lightclient/ewasm-runtime"
keywords = ["ethereum", "webassembly", "ewasm"]
edition = "2018"

[dependencies]
wabt = "0.9.2"
wasmi = "0.5.0"
log = "0.4.8"
arrayref = "0.3.5"

[features]
extra-pages = []
