[package]
name = "ewasm"
version = "0.2.1"
authors = ["Alex Beregszaszi <alex@rtfs.hu>", "Matt Garnett <crates@garnett.dev>", "Sam Wilson"]
license = "Apache-2.0"
description = "A modular WebAssembly runtime for Ethereum 2.0."
repository = "https://github.com/lightclient/ewasm-runtime"
keywords = ["ethereum", "webassembly", "ewasm"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
log = "0.4.8"
typed-builder = "0.3.0"
wabt = "0.9.2"
wasmi = "0.5.0"

[dev-dependencies]
lazy_static = "1.4.0"

[features]
extra-pages = []
